--- a/packages/assets/styles/variables.scss
+++ b/packages/assets/styles/variables.scss
@@ -1,9 +1,3 @@
-:root {
-	--color-bg: var(--surface-l1);
-	--color-raised-bg: var(--surface-l3);
-	--color-super-raised-bg: var(--surface-l4);
-}
-
 .light-properties {
 	--surface-l1: #ebebeb;
 	--surface-l2: #ffffff;
@@ -11,7 +5,11 @@
 	--surface-l4: #eeeeee;
 	--surface-l5: #e6e6e6;
 
-	--color-button-bg: #f5f5f5;
+	--color-bg: var(--surface-l1);
+	--color-raised-bg: var(--surface-l3);
+	--color-super-raised-bg: var(--surface-l4);
+
+	--color-button-bg: var(--surface-l4);
 	--color-button-border: rgba(161, 161, 161, 0.35);
 	--color-scrollbar: #96a2b0;
 
@@ -148,7 +146,11 @@ html {
 	--surface-l4: #34363c;
 	--surface-l5: #42444a;
 
-	--color-button-bg: #33363d;
+	--color-bg: var(--surface-l1);
+	--color-raised-bg: var(--surface-l3);
+	--color-super-raised-bg: var(--surface-l4);
+
+	--color-button-bg: var(--surface-l4);
 	--color-button-border: rgba(193, 190, 209, 0.12);
 	--color-scrollbar: var(--color-button-bg);
 
